nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-app
  labels:
    app: docker-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: docker-app
  template:
    metadata:
      labels:
        app: docker-app
    spec:
      containers:
      - name: docker-app
        image: devika1998/docker-app:lts
        ports:
        - containerPort: 8080
