nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports: 
  - targetPort: 8080
    port: 80
  selector:
    tier: docker-app
