ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: nginx-ingress
   namespace: nginx
   spec:
host:
http:
paths:
path: /
backend:
serviceName: nginx-svc
servicePort: 80
